# rustpy

./: .gitignore  CPYTHON_COMPATIBILITY_REPORT.md  Cargo.toml  README.md  architecture.md  cpython_comparison_report.md  design.md  hello.py  memory.md  phases.md  ppmm.toml  prd.md  rules.md  rust_out  rustpy  test.py  test_match.py  test_semi.py  test_yield_from.py
.github/workflows/: ci.yml
src/: encoding.rs  main.rs
src/ast/: mod.rs
src/compiler/: code.rs  mod.rs  opcodes.rs
src/diagnostics/: mod.rs
src/lexer/: mod.rs  tokens.rs
src/objects/: bool.rs  bound_method.rs  bytearray.rs  bytes.rs  class.rs  classmethod.rs  complex.rs  constants.rs  coroutine.rs  dict.rs  exception.rs  file.rs  float.rs  function.rs  generator.rs  instance.rs  int.rs  (+15 more)
stdlib/: base64.py  collections.py  contextlib.py  copy.py  csv.py  dataclasses.py  datetime.py  decimal.py  enum.py  fractions.py  functools.py  hashlib.py  itertools.py  json.py  operator.py  pathlib.py  pprint.py  random.py  re.py  sqlite3.py  statistics.py  string.py  struct.py  textwrap.py  threading.py  time.py  tkinter.py  typing.py  uuid.py  warnings.py
tests/: builtins_test.py  compat_test.py  conditionals_test.py  cpython_comparison_tester.py  cpython_tester.py  fstring_test.py  func_args_test.py  func_features_test.py  helper_module.py  import_test.py  lambda_test.py  loops_conditionals_test.py  loops_test.py  map_filter_all_test.py  phase4_test.py  print_test.py  run_all_tests.py  stdlib_comparison_test.py  stdlib_imports_test.py  test.py  test_match_literal.py  test_match_wildcard.py  tier3_test.py
(+11 files in other folders)
